[package]
name = "excrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "excrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.0"
anchor-spl = {version = "0.24.1"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
